--- a/static/map.html
+++ b/static/map.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 <meta charset=utf-8 />
-<title>GeoJSON marker from GitHub</title>
+<title>Bikefinder</title>
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
+    <script src="http://omnipotent.net/jquery.sparkline/2.1.2/jquery.sparkline.min.js.gz"></script>
 <script src='https://api.mapbox.com/mapbox.js/v2.2.4/mapbox.js'></script>
 <script src='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/leaflet.markercluster.js'></script>
 <link href='//api.tiles.mapbox.com/mapbox.js/plugins/leaflet-markercluster/v0.4.0/MarkerCluster.css' rel='stylesheet' />
@@ -18,8 +20,6 @@
 
     <div id='map'></div>
 
-    <!-- jQuery is required for this example. -->
-    <script src='https://code.jquery.com/jquery-1.11.0.min.js'></script>
     <script>
     L.mapbox.accessToken = 'pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA';
 
@@ -37,11 +37,19 @@
     var geojson = L.geoJson(data, {
       onEachFeature: function (feature, layer) {
         // USE A CUSTOM MARKER
-        layer.setIcon(L.mapbox.marker.icon({'marker-symbol': 'circle-stroked', 'marker-color': '59245f'}));
+        if (feature.properties.docks < 5) {
+          color = 'ffffff'
+        }
+        else if (feature.properties.bikes < 5) {
+          color = 'ff0000'
+        }
+        else {
+          color = '00ff00'
+        }
 
-        // ADD A POPUP WITH A CHART
-        //layer.bindPopup("<h1>" + feature.properties.NAME + "</h1><h2><small>Population Change & Projection (in thousands)</small></h2><img width='265px' src='http://chart.googleapis.com/chart?chf=bg,s,67676700&chxl=0:|1950|1985|2020&chxp=0,10,50,90&chxr=0,0,105&chxs=0,676767,10.5,0,l,676767&chxt=x,y&chs=260x100&cht=ls&chco=0000FF&chds=a&chd=t:" + feature.properties.POP1950 + "," + feature.properties.POP1955 + "," + feature.properties.POP1960 + "," + feature.properties.POP1965 + "," + feature.properties.POP1970 + "," + feature.properties.POP1975 + "," + feature.properties.POP1980 + "," + feature.properties.POP1985 + "," + feature.properties.POP1990 + "," + feature.properties.POP1995 + "," + feature.properties.POP2000 + "," + feature.properties.POP2005 + "," + feature.properties.POP2010 + "," + feature.properties.POP2015 + "," + feature.properties.POP2020 +  "&chdlp=b&chg=-1,0&chls=3&chma=5,5,5,5|5'/>");
+        layer.setIcon(L.mapbox.marker.icon({'marker-symbol': 'bicycle', 'marker-color': color}));
 
+        //layer.bindPopup("<h1>" + feature.properties.name + "</h1><strong>Bikes: </strong>" + feature.properties.bikes + "<br/><strong>Docks: </strong>" + feature.properties.docks);
       }
     });
     markers.addLayer(geojson);
@@ -50,11 +58,32 @@
     var map = L.mapbox.map('map', 'mapbox.streets').fitBounds(markers.getBounds());
     baseLayer.addTo(map);
     markers.addTo(map);
-  });
-         
-                  </script>
 
-                  </body>
-                  </html>
+    markers.on('click', function(e) {
+        if (!e.layer.feature.properties) return;
+        feature = e.layer.feature;
+        var latlng = L.latLng(feature.geometry.coordinates[1], feature.geometry.coordinates[0])
+        content = "<h1>" + feature.properties.name + "</h1><strong>Bikes: </strong>" + feature.properties.bikes + "<br/><strong>Docks: </strong>" + feature.properties.docks + "<br/><div id='sparkline'></div>";
+        var popup = L.popup()
+        .setLatLng(latlng)
+        .setContent(content)
+        .openOn(map);
+
+        $.getJSON("/station?i=" + feature.properties.i + "&s=" + feature.properties.s, function(data) {
+          sparkline_data = []
+          $.each(data, function(i, d) {
+            sparkline_data.push(d.Bikes+":"+d.Docks)
+          });
+          $("#sparkline").sparkline(sparkline_data, {type: 'bar'});
+        });
+
+      });
+
+  });
+
+</script>
+
+</body>
+</html>
 
 
