--- a/static/bikes.html
+++ b/static/bikes.html
@@ -15,11 +15,21 @@ Zepto(function($){
             data: { lat: position.coords.latitude, lon: position.coords.longitude },
             success: function(data) {
               $(data).each(function(index) {
-                $('#bikes').append("<p>" + this.properties.name + " " + this.properties.bikes + " bikes </p>");
+                lon = this.geometry.coordinates[0];
+                lat = this.geometry.coordinates[1];
+                map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
+                $('#bikes').append("<div map_url='"+map_url+"'><p>" + this.properties.name + " " + this.properties.bikes + " bikes. <span class='map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
+              });
+              $('#bikes span.map_link').on('click', function(e) {
+                map_url = $(this).parent().parent().attr("map_url");
+                img = $(this).parent().parent().find('img');
+                img.attr('src', map_url);
+                img.show();
               });
             }
            });
   }
 });
+
 </script>
 </html>
