--- a/static/index.html
+++ b/static/index.html
@@ -27,7 +27,7 @@ Zepto(function($){
                 lon = this.geometry.coordinates[0];
                 lat = this.geometry.coordinates[1];
                 map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256@2x.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
-                $('#bikes').append("<div map_url='"+map_url+"'><p>" + this.properties.name + " " + this.properties.bikes + " bikes. <span class='show_map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
+                $('#bikes').append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ")" + this.properties.bikes + " bikes. <span class='show_map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
               });
               $('#bikes span.show_map_link').on('click', function(e) {
                 if ($(this).hasClass('open')) {
