--- a/static/index.html
+++ b/static/index.html
@@ -4,21 +4,40 @@
 <script src="http://zeptojs.com/zepto.min.js"></script>
 </head>
 <body class="main">
-<div id="type" class="dp100">
-  <div class="dp50">
+<div id="type_selector" class="dp100">
+  <div id="get_bikes" class="dp50 button">
   I want a bike
   </div>
-  <div class="dp50">
+  <div id="get_freedocks" class="dp50 button">
   I want a dock
   </div>
 </div>
-<div id="bikes" class="dp100"></div>
+<div id="bike_results" class="dp100 results"></div>
+<div id="freedocks_results" class="dp100 results"></div>
 </body>
 <script>
 Zepto(function($){
-  navigator.geolocation.getCurrentPosition(load_bikes);
-  function load_bikes(position) {
-    $('#bikes').empty();
+  $('#type_selector .button').on('click', function(e) {
+    if ($(this).attr("id") == "get_bikes") {
+      navigator.geolocation.getCurrentPosition(get_bikes);
+    }
+    else {
+      navigator.geolocation.getCurrentPosition(get_freedocks);
+    }
+  });
+
+  function get_bikes(position) {
+    get_results(position, "/bikes-near", "bikes", "#bike_results")
+  }
+
+  function get_freedocks(position) {
+    get_results(position, "/freedocks-near", "docks", "#freedocks_results")
+  }
+
+  function get_results(position, url, property, results_selector) {
+    $('.results').hide();
+    $(results_selector).empty();
+    $(results_selector).show();
     $.ajax({type: 'GET',
             url: '/bikes-near',
             data: { lat: position.coords.latitude, lon: position.coords.longitude },
@@ -27,9 +46,9 @@ Zepto(function($){
                 lon = this.geometry.coordinates[0];
                 lat = this.geometry.coordinates[1];
                 map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256@2x.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
-                $('#bikes').append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ")" + this.properties.bikes + " bikes. <span class='show_map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
+                $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
               });
-              $('#bikes span.show_map_link').on('click', function(e) {
+              $(results_selector + " span.show_map_link").on('click', function(e) {
                 if ($(this).hasClass('open')) {
                   img = $(this).parent().parent().find('img');
                   img.hide();
