--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <link rel="stylesheet" href="css/malo.css" type="text/css"></link>
+<link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css" />
 <script src="http://zeptojs.com/zepto.min.js"></script>
 </head>
 <body class="main">
@@ -46,7 +47,9 @@ Zepto(function($){
                 lon = this.geometry.coordinates[0];
                 lat = this.geometry.coordinates[1];
                 map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256@2x.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
-                $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p><img src='' style='display: none;'/></div>");
+                bikes_pct = parseInt(this.properties.bikes / (this.properties.bikes + this.properties.docks) * 100)
+                chart_html = '<div class="charts"><div class="charts__chart chart--p100"><div class="charts__chart chart--p' + (bikes_pct) + ' chart--yellow"></div></div></div>';
+                $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p>" + chart_html + "<img src='' style='display: none;'/></div>");
               });
               $(results_selector + " span.show_map_link").on('click', function(e) {
                 if ($(this).hasClass('open')) {
