--- a/static/index.html
+++ b/static/index.html
@@ -48,7 +48,8 @@ Zepto(function($){
                 lat = this.geometry.coordinates[1];
                 map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256@2x.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
                 bikes_pct = parseInt(this.properties.bikes / (this.properties.bikes + this.properties.docks) * 100)
-                chart_html = '<div class="charts"><div class="charts__chart chart--p100"><div class="charts__chart chart--p' + (bikes_pct) + ' chart--yellow"></div></div></div>';
+                bikes_and_docks = this.properties.bikes + this.properties.docks;
+                chart_html = '<div class="charts" style="width: ' + (bikes_and_docks * 10) + 'px;"><div class="charts__chart chart--p100"><div class="charts__chart chart--p' + (bikes_pct) + ' chart--yellow"></div></div></div>';
                 $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p>" + chart_html + "<img src='' style='display: none;'/></div>");
               });
               $(results_selector + " span.show_map_link").on('click', function(e) {
