--- a/static/index.html
+++ b/static/index.html
@@ -3,22 +3,91 @@
 <link rel="stylesheet" href="css/malo.css" type="text/css"></link>
 <link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css" />
 <script src="http://zeptojs.com/zepto.min.js"></script>
+<style>
+body {
+  background: rgba(194,235,239,0.76);
+  font-family: sans-serif;
+  font-size: 16px;
+}
+
+.main {
+  margin: 2%;
+}
+
+.button {
+  border-radius: 25px;
+  padding: 20px;
+  height: 50px;
+  width: 50%;
+  text-align: center;
+  font-size: 120%;
+}
+
+.bike-button {
+  border: 3px solid #c0392b;
+  background: #c0392b;
+  color: white;
+}
+
+.dock-button {
+  border: 3px solid #2c3e50;
+  background: #2c3e50;
+  color: white;
+}
+
+.button-selected {
+  border: 3px solid black;
+}
+
+#messages {
+  color: white;
+  background: black;
+}
+
+img.map {
+  border: 3px solid black;
+}
+
+#spinner {
+  display: none;
+}
+
+div {
+  margin-bottom: 20px;
+}
+</style>
 </head>
 <body class="main">
 <div id="type_selector" class="dp100">
-  <div id="get_bikes" class="dp50 button">
+  <div id="get_bikes" class="dp25">
+  <div class="button bike-button">
   I want a bike
   </div>
-  <div id="get_freedocks" class="dp50 button">
+  </div>
+  <div id="get_freedocks" class="dp25">
+  <div class="button dock-button">
   I want a dock
   </div>
+  </div>
+  <div id="space" class="dp50">
 </div>
+<div id="messages" class="dp100"></div>
+<div id="spinner" class="dp100"><img src="/images/radio.gif"></div>
 <div id="bike_results" class="dp100 results"></div>
 <div id="freedocks_results" class="dp100 results"></div>
 </body>
 <script>
 Zepto(function($){
+
+   if (navigator.geolocation) {
+     navigator.geolocation.getCurrentPosition(get_freedocks);
+   } else {
+     $('#messages').append("<div>Please enable location services</div>");
+   }
+
   $('#type_selector .button').on('click', function(e) {
+    $('.button').removeClass('button-selected');
+    $(this).addClass('button-selected');
     if ($(this).attr("id") == "get_bikes") {
       navigator.geolocation.getCurrentPosition(get_bikes);
     }
@@ -37,8 +106,8 @@ Zepto(function($){
 
   function get_results(position, url, property, results_selector) {
     $('.results').hide();
+    $('#spinner').show();
     $(results_selector).empty();
-    $(results_selector).show();
     $.ajax({type: 'GET',
             url: '/bikes-near',
             data: { lat: position.coords.latitude, lon: position.coords.longitude },
@@ -49,8 +118,8 @@ Zepto(function($){
                 map_url = "https://api.mapbox.com/v4/mapbox.streets/url-https%3A%2F%2Fmapbox.com%2Fimg%2Frocket.png("+lon+","+lat+")/"+lon+","+lat+",15/256x256@2x.png?access_token=pk.eyJ1IjoiYW5kcmV3bCIsImEiOiJJdDlBVy0wIn0.6iigHBr09SrVB3N8graGdA";
                 bikes_pct = parseInt(this.properties.bikes / (this.properties.bikes + this.properties.docks) * 100)
                 bikes_and_docks = this.properties.bikes + this.properties.docks;
-                chart_html = '<div class="charts" style="width: ' + (bikes_and_docks * 10) + 'px;"><div class="charts__chart chart--p100"><div class="charts__chart chart--p' + (bikes_pct) + ' chart--yellow"></div></div></div>';
-                $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p>" + chart_html + "<img src='' style='display: none;'/></div>");
+                chart_html = '<div class="charts" style="width: ' + (bikes_and_docks * 10) + 'px;"><div class="charts__chart chart--p100 chart--grey"><div class="charts__chart chart--p' + (bikes_pct) + ' chart--red"></div></div></div>';
+                $(results_selector).append("<div map_url='"+map_url+"'><p>" + this.properties.name + " (Updated: " + this.properties.updated + ") " + this.properties[property] + " " + property + ". <span class='show_map_link'>Show Map</span></p>" + chart_html + "<img class='map' src='' style='display: none;'/></div>");
               });
               $(results_selector + " span.show_map_link").on('click', function(e) {
                 if ($(this).hasClass('open')) {
@@ -68,6 +137,8 @@ Zepto(function($){
                   $(this).html("Hide map");
                 }
               });
+              $('#spinner').hide();
+              $(results_selector).show();
             }
            });
   }
