--- a/static/index.html
+++ b/static/index.html
@@ -10,8 +10,10 @@ body {
   font-size: 16px;
 }
 
-html{font-size:110%;}
-@media(min-width:60em){html{font-size: 90%}}
+html{font-size:150%;}
+@media(min-device-width:800) {
+  html{font-size: 90%}
+}
 
 .main {
   margin: 2%;
