--- a/static/index.html
+++ b/static/index.html
@@ -1,10 +1,48 @@
 <html>
 <head>
 <meta name=viewport content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="css/malo.css" type="text/css"></link>
-<link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css" />
-<script src="http://zeptojs.com/zepto.min.js"></script>
+<link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
 <style>
+/*
+	Malo - CSS Library
+	Author:Vladimir Carrer
+*/
+
+/* CSS Reset */
+
+html, body, div, p{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  }
+  
+/* CSS Grid */
+
+/*
+For center layout 
+Define your default width in %, px or em
+
+.main {  margin:0 auto; width:85%;}
+
+*/
+
+.dp20,
+.dp25,
+.dp33,
+.dp50,
+.dp100{float:left; display: inline;  *margin-right:-3px; *padding-right:3px;} /* IE margin hack */
+
+/* dp = div percet */
+
+.dp20{width:20%;}
+.dp25{width:25%;}
+.dp33{width:33.33%;}
+.dp50{width:50%;}
+.dp100{width:100%;}
+.clear{ clear:both;}
+
+/* Bikefinder css styles */
 body {
   background: rgba(194,235,239,0.76);
   font-family: sans-serif;
@@ -173,5 +211,11 @@ Zepto(function($){
   }
 });
 
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+ga('create', 'UA-80863376-1', 'auto');
+ga('send', 'pageview');
 </script>
 </html>
