--- a/static/index.html
+++ b/static/index.html
@@ -3,16 +3,6 @@
 <meta name=viewport content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdn.rawgit.com/theus/chart.css/v1.0.0/dist/chart.css">
 <script src="https://cdnjs.cloudflare.com/ajax/libs/zepto/1.2.0/zepto.min.js"></script>
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-80863376-1', 'auto');
-  ga('send', 'pageview');
-
-</script>
 <style>
 /*
 	Malo - CSS Library
@@ -132,24 +122,32 @@ div.status {
 <div id="freedocks_results" class="dp100 results"></div>
 </body>
 <script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-80863376-1', 'auto');
+ga('send', 'pageview');
+
 Zepto(function($){
 
-   function display_message(message) {
-     $('#messages').empty();
-     if (message) {
-       $('#messages').append('<p>' + message + '</p>');
-       $('#messages').show();
-     }
-     else {
-       $('#messages').hide();
-     }
-   }
+  function display_message(message) {
+    $('#messages').empty();
+    if (message) {
+      $('#messages').append('<p>' + message + '</p>');
+      $('#messages').show();
+    }
+    else {
+      $('#messages').hide();
+    }
+  }
 
-   if (navigator.geolocation) {
-     navigator.geolocation.getCurrentPosition(get_freedocks);
-   } else {
-     display_message("Please enable location services");
-   }
+  display_message("Please enable location services to view bikes or free docks ");
+
+  if (navigator.geolocation) {
+    navigator.geolocation.getCurrentPosition(get_freedocks);
+  }
 
   $('#type_selector .button').on('click', function(e) {
     $('.button').removeClass('button-selected');
